--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>AK Resume</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
