--- a/index.html
+++ b/index.html
@@ -36,15 +36,12 @@
                 <img src="http://www.iconninja.com/files/245/45/195/facebook-media-social-like-network-fb-icon.svg" alt="Facebook" style="width:30px;height:30px;border:0;">
               </a>
 
-              <a href="https://instagram.com/ak.insta" target="_blank">
-                <img src="http://images.all-free-download.com/images/graphiclarge/instagram_new_icon_6822180.jpg" alt="Instagram" style="width:27px;height:27px;border:0;">
+              <a href="https://github.com/aanandkarthikeyan" target="_blank">
+                <img src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png" alt="Github" style="width:27px;height:27px;border:0;">
               </a>
 
               <a href="https://www.linkedin.com/in/anand-karthikeyan-093a41a3/" target="_blank">
                 <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-256.png" alt="Linkedin" style="width:30px;height:30px;border:0;">
-              </a>
-              <a href="https://twitter.com/ak_twter" target="_blank">
-                <img src="http://icons.iconarchive.com/icons/sicons/basic-round-social/512/twitter-icon.png" alt="Twitter" style="width:27px;height:27px;border:0;">
               </a>
             </div>
           </div>
