--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-4">
           <div class="panel panel-default">
-            <div class="panel-body">
+            <div class="panel-body profile">
               <div class="profilepic">
                 <img src="AK2.jpg" alt="AK" class="img-circle">
               </div>
