--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <div class="panel panel-info content">
               <div class="panel panel-body">
                 <h4><span class="glyphicon glyphicon-briefcase"></span><strong> ACADEMIC PROJECTS :</srong> </h4>
-                <h5><b>OnlineGreetings(MiniProject):</b></h5>
+                <h5>OnlineGreetings(MiniProject):</h5>
                 <p class="mini-project">The main objective of the project is to “Go Paperless” where people use greeting cards/invitation cards to share their wish and joy between friends and families. Even social media can be used instead of cards. But it will be an usual way of invitation. Using ’Project Title’, anyone can create an e-invitation/e- greeting. A short URL link is generated for created e-invitation. User can share the link with others. When anyone clicks the link, the e-invitation page will be opened with the detail. Thus, a gentle paperless invite is made in a unique way which shares smiles with a single click.</p>
 
-                <h5><b>ParkingManagementSystem(MiniProject):</b></h5>
+                <h5>ParkingManagementSystem(MiniProject):</h5>
                 <p class="mini-project">This project keeps track of vehicles entering the college campus. The detail such as number of two
                 wheelers and four wheelers are obtained for each department and also for the entire college. Parking time for the vehicles are also calculated.</p>
                 <br>
