--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>AK Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
 
@@ -61,7 +61,7 @@
                 wheelers and four wheelers are obtained for each department and also for the entire college. Parking time for the vehicles are also calculated.</p>
                 <br>
                 <h4><span class="glyphicon glyphicon-folder-open"></span><strong> PAPERS / WORKSHOPS / VOLUNTEER</strong></h4>
-                <ul>
+                <ul class="paper">
                   <li>Attended a Cluster Workshop in Hindustan College of Arts and Science, Coimbatore.</li>
                   <li>Safety and Security Member for YUGAM Cultural fest conducted at KCT, Coimbatore during February 2017</li>
                   <li>Volunteer for LAMBDA Workshop conducted at KCT, Coimbatore during February 2016</li>
@@ -77,7 +77,7 @@
                     <em>Area of Intrest:</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>UI Development</strong>
+                    <strong class="b">UI Development</strong>
                   </div>
                 </div>
                 <div class="row">
@@ -85,16 +85,16 @@
                     <em>Programming:</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>HTML,CSS,Python(Beginner),C++</strong>
+                    <strong class="c"> HTML,CSS,Python(Beginner),C++</strong>
                   </div>
                 </div>
 
                 <div class="row">
                   <div class="col-xs-3">
-                    <em>Query Languages:</em>
+                    <em>Query Lang:</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>SQL</strong>
+                    <strong class="d">SQL</strong>
                   </div>
                 </div>
 
@@ -103,7 +103,7 @@
                     <em>DBMS:</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>Oracle,MySQL</strong>
+                    <strong class="e">Oracle,MySQL</strong>
                   </div>
                 </div>
 
@@ -112,7 +112,7 @@
                     <em>Tools and Tech:</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>Adobe Photoshop</strong>
+                    <strong class="f">Adobe Photoshop</strong>
                   </div>
                 </div>
 
@@ -121,7 +121,7 @@
                     <em>Operating System:</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>Mac OS and Windows</strong>
+                    <strong class="g">Mac OS and Windows</strong>
                   </div>
                 </div>
               </div>
@@ -135,8 +135,8 @@
                     <em>2015 - 2017</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>Kumaraguru College of technology</strong>
-                    <div>MCA - 68.9%</div>
+                    <strong class="h">Kumaraguru College of technology</strong>
+                    <div class="o">MCA - 68.9%</div>
                   </div>
                 </div>
 
@@ -145,8 +145,8 @@
                     <em>2012 - 2015</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>PRIST University</strong>
-                    <div>BCA - 74.3%</div>
+                    <strong class="i">PRIST University</strong>
+                    <div class="n">BCA - 74.3%</div>
                   </div>
                 </div>
 
@@ -156,8 +156,8 @@
                     <em>2011 - 2012</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>Maxwell Matri Hr.Sec.Scl</strong>
-                    <div>HSC - 58.9%</div>
+                    <strong class="j">Maxwell Matri Hr.Sec.Scl</strong>
+                    <div class="m">HSC - 58.9%</div>
                   </div>
 
                 </div><div class="row">
@@ -165,8 +165,8 @@
                     <em>2009 - 2010</em>
                   </div>
                   <div class="col-xs-9">
-                    <strong>Maxwell Matri Hr.Sec.Scl</strong>
-                    <div>SSLC - 73.4%</div>
+                    <strong class="k">Maxwell Matri Hr.Sec.Scl</strong>
+                    <div class="l">SSLC - 73.4%</div>
                   </div>
                 </div>
               </div>
