--- a/index.html
+++ b/index.html
@@ -693,16 +693,16 @@
                                             <div class="o-grid">
                                                 <div class="o-grid__col-md-5">
                                                     <div class="c-work__timeframe">
-                                                        2008 &ndash; 2010
+                                                        2015 &ndash; 2017
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Webster Tech University
+                                                        Kumaraguru College Of Technology
                                                     </h3>
                                                     <h4 class="c-work__title">
                                                         Master of Computer Science
                                                     </h4>
                                                     <div class="c-work__location">
-                                                        Miami, FL
+                                                        Coimbatore, Tamil Nadu.
                                                     </div>
                                                 </div>
                                                 <div class="o-grid__col-md-7">
@@ -720,16 +720,16 @@
                                             <div class="o-grid">
                                                 <div class="o-grid__col-md-5">
                                                     <div class="c-work__timeframe">
-                                                        2003 &ndash; 2008
+                                                        2012 &ndash; 2015
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Ninsei University
+                                                        PRIST University
                                                     </h3>
                                                     <h4 class="c-work__title">
                                                         Bachelor of Computer Science
                                                     </h4>
                                                     <div class="c-work__location">
-                                                        Tokyo, Japan
+                                                        Thanjavur, Tamil Nadu.
                                                     </div>
                                                 </div>
                                                 <div class="o-grid__col-md-7">
@@ -747,16 +747,16 @@
                                             <div class="o-grid">
                                                 <div class="o-grid__col-md-5">
                                                     <div class="c-work__timeframe">
-                                                        2000 &ndash; 2003
+                                                        2011 &ndash; 2012
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Academy of Fine Arts
+                                                        Maxwell Matriculation Hr Sec.School
                                                     </h3>
                                                     <h4 class="c-work__title">
-                                                        Master of Arts
+                                                        Computer Science
                                                     </h4>
                                                     <div class="c-work__location">
-                                                        Berlin, Germany
+                                                        Thanjavur, Tamil Nadu
                                                     </div>
                                                 </div>
                                                 <div class="o-grid__col-md-7">
