--- a/index.html
+++ b/index.html
@@ -572,16 +572,16 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">
-                                                    2015 &ndash; Present
+                                                    2019 &ndash; Present
                                                 </div>
                                                 <h3 class="c-work__heading">
-                                                    Unicorn Incubator Inc.
+                                                    GoProtoz Design
                                                 </h3>
                                                 <h4 class="c-work__title">
-                                                    Senior Interface Designer
+                                                    UI / UX Designer
                                                 </h4>
                                                 <div class="c-work__location">
-                                                    Portland, OR
+                                                    Bengaluru, Karnataka.
                                                 </div>
                                             </div>
                                             <div class="o-grid__col-md-7">
@@ -599,16 +599,16 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">
-                                                    2013 &ndash; 2015
+                                                    2018 &ndash; 2019
                                                 </div>
                                                 <h3 class="c-work__heading">
-                                                    California Design Bureau
+                                                    APPCOUP
                                                 </h3>
                                                 <h4 class="c-work__title">
-                                                    Creative Director
+                                                    UI / UX Designer
                                                 </h4>
                                                 <div class="c-work__location">
-                                                    Cupertino, CA
+                                                    Coimbatore, Tamil Nadu.
                                                 </div>
                                             </div>
                                             <div class="o-grid__col-md-7">
@@ -626,16 +626,16 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">
-                                                    2010 &ndash; 2013
+                                                    2017 &ndash; 2018
                                                 </div>
                                                 <h3 class="c-work__heading">
-                                                    Dreamland Creative
+                                                    Yoga's IT Solution
                                                 </h3>
                                                 <h4 class="c-work__title">
-                                                    Front-end Designer
+                                                    UI Designer
                                                 </h4>
                                                 <div class="c-work__location">
-                                                    New York, NY
+                                                    Thanjavur, Tamil Nadu.
                                                 </div>
                                             </div>
                                             <div class="o-grid__col-md-7">
@@ -750,13 +750,13 @@
                                                         2011 &ndash; 2012
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Maxwell Matriculation Hr Sec.School
+                                                        Maxwell Matriculation Hr Sec School
                                                     </h3>
                                                     <h4 class="c-work__title">
                                                         Computer Science
                                                     </h4>
                                                     <div class="c-work__location">
-                                                        Thanjavur, Tamil Nadu
+                                                        Thanjavur, Tamil Nadu.
                                                     </div>
                                                 </div>
                                                 <div class="o-grid__col-md-7">
