--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                                                 </a>
                                             </li>
                                             <li class="a-header">
-                                                <a href="https://www.instagram.com/ak.insta" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://dribbble.com/anandkarthikeyan" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="fab  fa-lg  fa-dribbble"></i>
                                                 </a>
                                             </li>
                                             <li class="a-header">
-                                                <a href="https://twitter.com/_Ruven" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://www.linkedin.com/in/anand-karthikeyan-093a41a3/" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="fab fa-lg fa-linkedin"></i>
                                                 </a>
                                             </li>
