--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <title>Desmond Resume Template</title>
+        <title>AK Resume</title>
 
         <meta name="description" content="">
 
