--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                                             <h4>Web</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    ruventhemes.com
+                                                                    instagram.com/ak.insta
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
@@ -188,7 +188,7 @@
                                                             <h4>Email</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    Jaiganeshanand@gmail.com
+                                                                    jaiganeshanand@gmail.com
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
