--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                                                 <div class="type-wrap" style="height: 50px;">
                                                     <h2 class="a-header  c-brand__sub-title  t-sub-title">
-                                                        A <span id="typed6" class="c-brand__sizer" style="white-space:pre;"></span>
+                                                        A <span id="typed6" class="" style="white-space:pre;"></span>
                                                     </h2>
                                                   </div> 
                                             </div><!-- /c-brand -->
