--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                                             <h4>Web</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    ruventhemes.com
+                                                                    instagram.com/ak.insta
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
@@ -576,16 +576,16 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">
-                                                    2015 &ndash; Present
+                                                    2019 &ndash; Present
                                                 </div>
                                                 <h3 class="c-work__heading">
-                                                    Unicorn Incubator Inc.
+                                                    GoProtoz Design
                                                 </h3>
                                                 <h4 class="c-work__title">
-                                                    Senior Interface Designer
+                                                    UI / UX Designer
                                                 </h4>
                                                 <div class="c-work__location">
-                                                    Portland, OR
+                                                    Bangalore, Karnataka.
                                                 </div>
                                             </div>
                                             <div class="o-grid__col-md-7">
@@ -603,16 +603,16 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">
-                                                    2013 &ndash; 2015
+                                                    2018 &ndash; 2019
                                                 </div>
                                                 <h3 class="c-work__heading">
-                                                    California Design Bureau
+                                                    Appcoup Tech
                                                 </h3>
                                                 <h4 class="c-work__title">
-                                                    Creative Director
+                                                    UI / UX Designer
                                                 </h4>
                                                 <div class="c-work__location">
-                                                    Cupertino, CA
+                                                    Coimbatore, Tamil Nadu.
                                                 </div>
                                             </div>
                                             <div class="o-grid__col-md-7">
@@ -630,16 +630,16 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">
-                                                    2010 &ndash; 2013
+                                                    2017 &ndash; 2018
                                                 </div>
                                                 <h3 class="c-work__heading">
-                                                    Dreamland Creative
+                                                    Yoga's IT Solutions
                                                 </h3>
                                                 <h4 class="c-work__title">
-                                                    Front-end Designer
+                                                    UI Designer
                                                 </h4>
                                                 <div class="c-work__location">
-                                                    New York, NY
+                                                    Thanjavur, Tamil Nadu.
                                                 </div>
                                             </div>
                                             <div class="o-grid__col-md-7">
@@ -697,16 +697,16 @@
                                             <div class="o-grid">
                                                 <div class="o-grid__col-md-5">
                                                     <div class="c-work__timeframe">
-                                                        2008 &ndash; 2010
+                                                        2015 &ndash; 2017
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Webster Tech University
+                                                        Kumaraguru College Of Technology
                                                     </h3>
                                                     <h4 class="c-work__title">
                                                         Master of Computer Science
                                                     </h4>
                                                     <div class="c-work__location">
-                                                        Miami, FL
+                                                        Coimbatore, Tamil Nadu.
                                                     </div>
                                                 </div>
                                                 <div class="o-grid__col-md-7">
@@ -724,16 +724,16 @@
                                             <div class="o-grid">
                                                 <div class="o-grid__col-md-5">
                                                     <div class="c-work__timeframe">
-                                                        2003 &ndash; 2008
+                                                        2012 &ndash; 2015
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Ninsei University
+                                                        PRIST University
                                                     </h3>
                                                     <h4 class="c-work__title">
                                                         Bachelor of Computer Science
                                                     </h4>
                                                     <div class="c-work__location">
-                                                        Tokyo, Japan
+                                                        Thanjavur, Tamil Nadu.
                                                     </div>
                                                 </div>
                                                 <div class="o-grid__col-md-7">
@@ -751,16 +751,16 @@
                                             <div class="o-grid">
                                                 <div class="o-grid__col-md-5">
                                                     <div class="c-work__timeframe">
-                                                        2000 &ndash; 2003
+                                                        2011 &ndash; 2012
                                                     </div>
                                                     <h3 class="c-work__heading">
-                                                        Academy of Fine Arts
+                                                        Maxwell Matric Hr Sec School
                                                     </h3>
                                                     <h4 class="c-work__title">
-                                                        Master of Arts
+                                                        HSC (+2)
                                                     </h4>
                                                     <div class="c-work__location">
-                                                        Berlin, Germany
+                                                        Thanjavur, Tamil Nadu.
                                                     </div>
                                                 </div>
                                                 <div class="o-grid__col-md-7">
