--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <title>Anand Karthikeyan</title>
+        <title>AK Resume</title>
 
         <meta name="description" content="">
 
@@ -822,10 +822,10 @@
                                                 </div>
                                                 <div class="o-media__body  o-content__body">
                                                     <h3 class="t-link-container__item">
-                                                        Themeforest
+                                                        Behance
                                                     </h3>
                                                     <p>
-                                                        An overview of the themes and templates that I sell.
+                                                        An overview of the of my projects with styles!
                                                     </p>
                                                 </div>
                                             </div><!-- /o-media -->
@@ -866,7 +866,7 @@
                                                 </div>
                                                 <div class="o-media__body  o-content__body">
                                                     <h3 class="t-link-container__item">
-                                                        Medium
+                                                        LinkedIn
                                                     </h3>
                                                     <p>
                                                         Yes. I'm also a blogger and here you find my writings.
@@ -910,7 +910,7 @@
                                                 </div>
                                                 <div class="o-media__body  o-content__body">
                                                     <h3 class="t-link-container__item">
-                                                        Flickr
+                                                        Instagram
                                                     </h3>
                                                     <p>
                                                         A selection of photos I shot throughout the years.
@@ -1090,7 +1090,7 @@
                                                     <h4>Web</h4>
                                                     <p>
                                                         <span class="t-link-container__item--blended">
-                                                            ruventhemes.com
+                                                            instagram.com/ak.insta
                                                         </span>
                                                     </p>
                                                 </a><!-- /o-link-container -->
