--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                         <header class="o-section__header  t-section__header">
                             <div class="o-content">
                                 <h2 class="o-section__heading">
-                                    Awards
+                                    Certifications & Awards
                                 </h2>
                                 <div class="o-content__body  o-section__description">
                                     Happy times!
@@ -985,7 +985,7 @@
                                     <div class="o-content">
                                         <hr class="c-deco-line  t-primary-color-line" />
                                         <div class="o-content__body">
-                                            <h3>Unicorn Developer Award 2016</h3>
+                                            <h3>Iteraction Design Foundation</h3>
                                             <p>
                                                 Lorem ipsum dolor sit amet, justo eget porttitor mauris sit amet felis. Neque id cursus faucibus.
                                             </p>
@@ -997,7 +997,7 @@
                                     <div class="o-content">
                                         <hr class="c-deco-line  t-primary-color-line" />
                                         <div class="o-content__body">
-                                            <h3>Website of the Year Award 2015</h3>
+                                            <h3>EMC2 - Data Mining</h3>
                                             <p>
                                                 Praesent dapibus dolor sit amet, justo eget porttitor mauris sit amet. Neque id cursus faucibus.
                                             </p>
@@ -1009,7 +1009,7 @@
                                     <div class="o-content">
                                         <hr class="c-deco-line  t-primary-color-line" />
                                         <div class="o-content__body">
-                                            <h3>1st Place at CSShacker Conference</h3>
+                                            <h3>Canon Workshops</h3>
                                             <p>
                                                 Lorem ipsum dolor sit amet, justo eget porttitor mauris sit amet felis. Neque id cursus faucibus.
                                             </p>
