--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                                 </a>
                                             </li>
                                             <li class="a-header">
-                                                <a href="https://twitter.com/_Ruven" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://twitter.com/ak_2wter" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="fab fa-lg fa-linkedin"></i>
                                                 </a>
                                             </li>
@@ -879,7 +879,7 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="https://dribbble.com" target="_blank" class="t-link-container">
+                                        <a href="https://dribbble.com/anandkarthikeyan" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
@@ -1152,7 +1152,7 @@
                                                 </a>
                                             </li>
                                             <li class="a-header">
-                                                <a href="https://twitter.com/_Ruven" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://twitter.com/ak_2wter" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="fab fa-lg fa-linkedin"></i>
                                                 </a>
                                             </li>
