--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                 <div class="c-intro">
                                     <div class="o-content__body">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed
+                                            I care about the details and consider the motion design of affordances to be crucial in creating effective, intuitive interfaces. I like prototyping - it helps me think through interaction models and new possibilities.
                                             <a href="#" target="_blank">pretium</a>, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Nulla vitae mauris non felis mollis faucibus.
                                         </p>
                                         <p>
