--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                     <div class="o-content__body">
                                         <p>
                                             I care about the details and consider the motion design of affordances to be crucial in creating effective, intuitive interfaces. I like prototyping - it helps me think through interaction models and new possibilities.
-                                            <a href="#" target="_blank">pretium</a>, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti. Nulla vitae mauris non felis mollis faucibus.
+                                            <a href="#" target="_blank">pretium</a>, Energetic UI UX Designer, skilled in Adobe XD, Interaction and UX research. Have completed several projects, including design of an ecommerce webapp, mobile for Nissan Connected-Car,and improved UX for Aprisal App.
                                         </p>
                                         <p>
                                             Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna. Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis.
