--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                             <a href="#" target="_blank">Energetic UI UX Designer</a>,skilled in Adobe XD, Interaction and UX research. Have completed several projects, including design of an ecommerce webapp, mobile for Nissan Connected-Car,and improved UX for Aprisal App.
                                         </p>
                                         <p>
-                                            Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna. Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis.
+                                            Inputs into concept direction and visual development. Leads discovery sessions, assists in defining product requirements and user testing, discover user personas, and interpret user and business goals and priorities. Collaborates across teams to connect user experiences across digital and traditional media. Invites diverse points of view from peers, project team and leadership— ensures a strong understanding which is shared with others; facilitates discussions in peer reviews.
                                         </p>
                                     </div>
                                 </div>
