--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                 <div class="c-intro">
                                     <div class="o-content__body">
                                         <p>
-                                            I care about the details and consider the motion design of affordances to be crucial in creating effective, intuitive interfaces. I like prototyping - it helps me think through interaction models and new possibilities.
+                                            2+ years of experience in a in a User Experience and UI Design role for Software Products & Web Applications experience, I care about the details and consider the motion design of affordances to be crucial in creating effective, intuitive interfaces. I like prototyping - it helps me think through interaction models and new possibilities.
                                             <a href="#" target="_blank">Energetic UI UX Designer</a>,skilled in Adobe XD, Interaction and UX research. Have completed several projects, including design of an ecommerce webapp, mobile for Nissan Connected-Car,and improved UX for Aprisal App.
                                         </p>
                                         <p>
